parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_import_statement-8.snap
---
source: parser/src/parser/parser.rs
description: from a.b import c
---
Module {
    node: Node {
        start: 0,
        end: 17,
    },
    body: [
        ImportFrom(
            ImportFrom {
                node: Node {
                    start: 0,
                    end: 17,
                },
                module: "a.b",
                names: [
                    Alias {
                        node: Node {
                            start: 16,
                            end: 17,
                        },
                        name: "c",
                        asname: None,
                    },
                ],
                level: 0,
            },
        ),
    ],
}
