parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_import_statement.snap
---
source: parser/src/parser/parser.rs
description: import a
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        Import(
            Import {
                node: Node {
                    start: 0,
                    end: 8,
                },
                names: [
                    Alias {
                        node: Node {
                            start: 7,
                            end: 8,
                        },
                        name: "a",
                        asname: None,
                    },
                ],
            },
        ),
    ],
}
