parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__parse_unary_op-3.snap
---
source: parser/src/parser/parser.rs
description: ~ a
---
Module {
    node: Node {
        start: 0,
        end: 3,
    },
    body: [
        ExpressionStatement(
            UnaryOp(
                UnaryOperation {
                    node: Node {
                        start: 0,
                        end: 3,
                    },
                    op: Invert,
                    operand: Name(
                        Name {
                            node: Node {
                                start: 2,
                                end: 3,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
