parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__separate_statements.snap
---
source: parser/src/parser/parser.rs
description: "# Test case to check that we return correct error when two python statements are on the same line\n\ndef foo():\n    x = 1; y = 2\n    return x + y\n\ndef bar():\n    # TODO(parser): enable after error handling\n    # x = 1 y = 2\n    return x + y\n\n# TODO(parser): enable after error handling\n# a = 1  b = 2\n"
---
Module {
    node: Node {
        start: 0,
        end: 299,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 99,
                    end: 145,
                },
                name: "foo",
                args: Arguments {
                    node: Node {
                        start: 107,
                        end: 107,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 114,
                                end: 119,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 114,
                                            end: 115,
                                        },
                                        id: "x",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 118,
                                        end: 119,
                                    },
                                    value: 1,
                                },
                            ),
                        },
                    ),
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 121,
                                end: 126,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 121,
                                            end: 122,
                                        },
                                        id: "y",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 125,
                                        end: 126,
                                    },
                                    value: 2,
                                },
                            ),
                        },
                    ),
                    Return(
                        Return {
                            node: Node {
                                start: 131,
                                end: 143,
                            },
                            value: Some(
                                BinOp(
                                    BinOp {
                                        node: Node {
                                            start: 138,
                                            end: 143,
                                        },
                                        op: Add,
                                        left: Name(
                                            Name {
                                                node: Node {
                                                    start: 138,
                                                    end: 139,
                                                },
                                                id: "x",
                                            },
                                        ),
                                        right: Name(
                                            Name {
                                                node: Node {
                                                    start: 142,
                                                    end: 143,
                                                },
                                                id: "y",
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [],
            },
        ),
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 145,
                    end: 298,
                },
                name: "bar",
                args: Arguments {
                    node: Node {
                        start: 153,
                        end: 153,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Return(
                        Return {
                            node: Node {
                                start: 226,
                                end: 238,
                            },
                            value: Some(
                                BinOp(
                                    BinOp {
                                        node: Node {
                                            start: 233,
                                            end: 238,
                                        },
                                        op: Add,
                                        left: Name(
                                            Name {
                                                node: Node {
                                                    start: 233,
                                                    end: 234,
                                                },
                                                id: "x",
                                            },
                                        ),
                                        right: Name(
                                            Name {
                                                node: Node {
                                                    start: 237,
                                                    end: 238,
                                                },
                                                id: "y",
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [],
            },
        ),
    ],
}
