parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__string_literal_concatnation-10.snap
---
source: parser/src/parser/parser.rs
description: "'d' f'a' 'b'"
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 3,
                                },
                                value: "d",
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 6,
                                    end: 7,
                                },
                                value: "a",
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 12,
                                },
                                value: "b",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
