parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__string_literal_concatnation-11.snap
---
source: parser/src/parser/parser.rs
description: "f'a_{1}' 'b' "
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            JoinedStr(
                JoinedStr {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    values: [
                        Constant(
                            Constant {
                                node: Node {
                                    start: 2,
                                    end: 4,
                                },
                                value: "a_",
                            },
                        ),
                        FormattedValue(
                            FormattedValue {
                                node: Node {
                                    start: 4,
                                    end: 0,
                                },
                                value: Constant(
                                    Constant {
                                        node: Node {
                                            start: 5,
                                            end: 6,
                                        },
                                        value: 1,
                                    },
                                ),
                                conversion: -1,
                                format_spec: None,
                            },
                        ),
                        Constant(
                            Constant {
                                node: Node {
                                    start: 0,
                                    end: 12,
                                },
                                value: "b",
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
